manifests/istio/istio-injection-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
  labels:
    istio-injection: enabled
